Closed
Bug 1679273
Opened 4 years ago
Closed 4 years ago
Broken build on platforms without MOZ_GECKO_PROFILER
Categories
(Core :: Gecko Profiler, defect, P3)
Tracking
()
RESOLVED
FIXED
85 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox83 | --- | unaffected |
firefox84 | --- | unaffected |
firefox85 | --- | fixed |
People
(Reporter: dan, Assigned: sg)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
I am getting a build failure on ppc64le and s390x platforms after a change that went in the last ~24 hours. Bisecting to the exact commit is difficult as we are hitting multiple issues at the same time (all went in in the last day), but seems it's related to the fact that ppc64le and s390x platforms don't implement the gecko profiler.
0:22.43 /usr/bin/g++ -std=gnu++17 -o Unified_cpp_dom_animation0.o -c -I/mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/stl_wrappers -I/mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/system_wrappers -include /mnt/dan/firefox.git/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DDEBUG=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/mnt/dan/firefox.git/dom/animation -I/mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dom/animation -I/mnt/dan/firefox.git/dom/base -I/mnt/dan/firefox.git/layout/base -I/mnt/dan/firefox.git/layout/style -I/mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/ipc/ipdl/_ipdlheaders -I/mnt/dan/firefox.git/ipc/chromium/src -I/mnt/dan/firefox.git/ipc/glue -I/mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include -I/mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/nspr -I/mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/mozilla-config.h -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wc++2a-compat -Wduplicated-cond -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wno-error=deprecated-copy -Wformat -Wformat-overflow=2 -Wno-psabi -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -fno-rtti -fno-exceptions -fno-math-errno -pthread -pipe -g -Og -fno-omit-frame-pointer -funwind-tables -MD -MP -MF .deps/Unified_cpp_dom_animation0.o.pp -fdiagnostics-color Unified_cpp_dom_animation0.cpp
0:22.97 In file included from /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/mozilla/ProfileChunkedBuffer.h:10,
0:22.97 from /mnt/dan/firefox.git/layout/base/nsRefreshDriver.h:16,
0:22.97 from /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/mozilla/dom/DocumentTimeline.h:16,
0:22.97 from /mnt/dan/firefox.git/dom/animation/Animation.cpp:15,
0:22.97 from Unified_cpp_dom_animation0.cpp:2:
0:22.97 /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/mozilla/BaseProfilerDetail.h:17:4: error: #error Do not #include this header when MOZ_GECKO_PROFILER is not #defined.
0:22.97 17 | # error Do not #include this header when MOZ_GECKO_PROFILER is not #defined.
0:22.97 | ^~~~~
0:29.93 In file included from /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/GeckoProfiler.h:21,
0:29.93 from /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/mozilla/PresShellInlines.h:10,
0:29.93 from /mnt/dan/firefox.git/dom/animation/EffectCompositor.cpp:24,
0:29.93 from Unified_cpp_dom_animation0.cpp:101:
0:29.93 /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/BaseProfiler.h:63:7: error: redefinition of ‘class mozilla::ProfileChunkedBuffer’
0:29.93 63 | class ProfileChunkedBuffer {};
0:29.93 | ^~~~~~~~~~~~~~~~~~~~
0:29.93 In file included from /mnt/dan/firefox.git/layout/base/nsRefreshDriver.h:16,
0:29.93 from /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/mozilla/dom/DocumentTimeline.h:16,
0:29.93 from /mnt/dan/firefox.git/dom/animation/Animation.cpp:15,
0:29.93 from Unified_cpp_dom_animation0.cpp:2:
0:29.93 /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dist/include/mozilla/ProfileChunkedBuffer.h:453:7: note: previous definition of ‘class mozilla::ProfileChunkedBuffer’
0:29.93 453 | class ProfileChunkedBuffer {
0:29.93 | ^~~~~~~~~~~~~~~~~~~~
0:34.62 gmake[4]: *** [/mnt/dan/firefox.git/config/rules.mk:676: Unified_cpp_dom_animation0.o] Chyba 1
0:34.62 gmake[4]: Opouští se adresář „/mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/dom/animation“
0:34.62 gmake[3]: *** [/mnt/dan/firefox.git/config/recurse.mk:72: dom/animation/target-objects] Chyba 2
0:34.62 gmake[3]: Opouští se adresář „/mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu“
Assignee | ||
Updated•4 years ago
|
Component: DOM: Animation → Gecko Profiler
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → sgiesecke
Updated•4 years ago
|
Has Regression Range: --- → yes
Assignee | ||
Comment 2•4 years ago
|
||
Severity: -- → S3
Priority: -- → P3
Updated•4 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Assignee | ||
Updated•4 years ago
|
Summary: Broken build in dom/animation/Animation.cpp after recent change → Broken build on ppc64le and s390x in dom/animation/Animation.cpp after recent change
Assignee | ||
Updated•4 years ago
|
Summary: Broken build on ppc64le and s390x in dom/animation/Animation.cpp after recent change → Broken build on platforms without MOZ_GECKO_PROFILER
Comment 4•4 years ago
|
||
Set release status flags based on info from the regressing bug 1660470
status-firefox83:
--- → unaffected
status-firefox84:
--- → unaffected
status-firefox85:
--- → affected
status-firefox-esr78:
--- → unaffected
Updated•4 years ago
|
Keywords: regression
Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f263b68fb81f
Fix bustage when building without MOZ_GECKO_PROFILER. r=gerald
Comment 7•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•