Bug 1679273 - Fix bustage when building without MOZ_GECKO_PROFILER. r=gerald

Differential Revision: https://phabricator.services.mozilla.com/D97966