dom/serviceworkers/ServiceWorkerRegistrationProxy.cpp
@@ -7,8 +7,8 @@
 #include "ServiceWorkerRegistrationProxy.h"
 
 #include "mozilla/SchedulerGroup.h"
-#include "mozilla/ipc/BackgroundParent.h"
 #include "mozilla/ScopeExit.h"
+#include "mozilla/ipc/BackgroundParent.h"
 #include "ServiceWorkerManager.h"
 #include "ServiceWorkerRegistrationParent.h"
 #include "ServiceWorkerUnregisterCallback.h"
