layout/base/nsRefreshDriver.cpp
@@ -1216,7 +1216,10 @@ void nsRefreshDriver::AddRefreshObserver(nsARefreshObserver* aObserver,
 #endif
   array.AppendElement(ObserverData{aObserver, aObserverDescription,
                                    TimeStamp::Now(), innerWindowID,
-                                   profiler_capture_backtrace(), aFlushType});
+#ifdef MOZ_GECKO_PROFILER
+                                   profiler_capture_backtrace(),
+#endif
+                                   aFlushType});
   EnsureTimerStarted();
 }
 
@@ -1466,7 +1469,9 @@ void nsRefreshDriver::StopTimer() {
 
   mActiveTimer->RemoveRefreshDriver(this);
   mActiveTimer = nullptr;
+#ifdef MOZ_GECKO_PROFILER
   mRefreshTimerStartedCause = nullptr;
+#endif
 }
 
 uint32_t nsRefreshDriver::ObserverCount() const {
@@ -2033,18 +2038,18 @@ void nsRefreshDriver::Tick(VsyncId aId, TimeStamp aNowTime) {
   AUTO_PROFILER_LABEL("nsRefreshDriver::Tick", LAYOUT);
 
   nsAutoCString profilerStr;
-#if MOZ_GECKO_PROFILER
+#ifdef MOZ_GECKO_PROFILER
   if (profiler_can_accept_markers()) {
     profilerStr.AppendLiteral("Tick reasons:");
     AppendTickReasonsToString(tickReasons, profilerStr);
   }
-#endif
   AUTO_PROFILER_MARKER_TEXT(
       "RefreshDriverTick", GRAPHICS,
       MarkerOptions(
           MarkerStack::TakeBacktrace(std::move(mRefreshTimerStartedCause)),
           MarkerInnerWindowIdFromDocShell(GetDocShell(mPresContext))),
       profilerStr);
+#endif
 
   mResizeSuppressed = false;
 
@@ -2297,7 +2302,7 @@ void nsRefreshDriver::Tick(VsyncId aId, TimeStamp aNowTime) {
   if (mViewManagerFlushIsPending) {
     AutoRecordPhase paintRecord(&phasePaint);
     nsCString transactionId;
-#if MOZ_GECKO_PROFILER
+#ifdef MOZ_GECKO_PROFILER
     if (profiler_can_accept_markers()) {
       transactionId.AppendLiteral("Transaction ID: ");
       transactionId.AppendInt((uint64_t)mNextTransactionId);
@@ -2643,9 +2648,11 @@ void nsRefreshDriver::ScheduleViewManagerFlush() {
   NS_ASSERTION(mPresContext->IsRoot(),
                "Should only schedule view manager flush on root prescontexts");
   mViewManagerFlushIsPending = true;
+#ifdef MOZ_GECKO_PROFILER
   if (!mViewManagerFlushCause) {
     mViewManagerFlushCause = profiler_capture_backtrace();
   }
+#endif
   mHasScheduleFlush = true;
   EnsureTimerStarted(eNeverAdjustTimer);
 }
