layout/base/nsRefreshDriver.h
@@ -13,7 +13,6 @@
 #define nsRefreshDriver_h_
 
 #include "mozilla/FlushType.h"
-#include "mozilla/ProfileChunkedBuffer.h"
 #include "mozilla/TimeStamp.h"
 #include "mozilla/UniquePtr.h"
 #include "mozilla/Vector.h"
@@ -30,6 +29,10 @@
 #include "mozilla/dom/VisualViewport.h"
 #include "mozilla/layers/TransactionIdAllocator.h"
 #include "LayersTypes.h"
+
+#ifdef MOZ_GECKO_PROFILER
+#  include "mozilla/ProfileChunkedBuffer.h"
+#endif
 
 class nsPresContext;
 
@@ -435,7 +438,9 @@ class nsRefreshDriver final : public mozilla::layers::TransactionIdAllocator,
     const char* mDescription;
     mozilla::TimeStamp mRegisterTime;
     mozilla::Maybe<uint64_t> mInnerWindowId;
+#ifdef MOZ_GECKO_PROFILER
     mozilla::UniquePtr<mozilla::ProfileChunkedBuffer> mCause;
+#endif
     mozilla::FlushType mFlushType;
 
     bool operator==(nsARefreshObserver* aObserver) const {
@@ -488,7 +493,9 @@ class nsRefreshDriver final : public mozilla::layers::TransactionIdAllocator,
   mozilla::RefreshDriverTimer* ChooseTimer();
   mozilla::RefreshDriverTimer* mActiveTimer;
   RefPtr<mozilla::RefreshDriverTimer> mOwnTimer;
+#ifdef MOZ_GECKO_PROFILER
   mozilla::UniquePtr<mozilla::ProfileChunkedBuffer> mRefreshTimerStartedCause;
+#endif
 
   // nsPresContext passed in constructor and unset in Disconnect.
   mozilla::WeakPtr<nsPresContext> mPresContext;
@@ -517,7 +524,9 @@ class nsRefreshDriver final : public mozilla::layers::TransactionIdAllocator,
   // flush since the last time we did it.
   const mozilla::TimeDuration mMinRecomputeVisibilityInterval;
 
+#ifdef MOZ_GECKO_PROFILER
   mozilla::UniquePtr<mozilla::ProfileChunkedBuffer> mViewManagerFlushCause;
+#endif
 
   bool mThrottled : 1;
   bool mNeedToRecomputeVisibility : 1;
